--- a/app/src/main/res/layout/student_info.xml
+++ b/app/src/main/res/layout/student_info.xml
@@ -21,40 +21,36 @@
 
     </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/chart_overall"
-        android:layout_width="match_parent"
-        android:layout_height="200dp" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="20dp"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="当天课程学习"
-            android:textColor="@color/black"
-            />
-    </LinearLayout>
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/chart_detail"
-        android:layout_width="match_parent"
-
-        android:layout_height="200dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="top|center"
-        android:layout_marginTop="15dp"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="每周课程学习"
-            android:textColor="@color/black"
+        android:orientation="vertical">
+        <lecho.lib.hellocharts.view.LineChartView
+            android:id="@+id/chart_overall"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             />
+
+        <lecho.lib.hellocharts.view.PieChartView
+            android:id="@+id/chart_detail"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="0dp" />
     </LinearLayout>
+
+    <!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="当天课程学习"-->
+    <!--android:textColor="@color/black"-->
+    <!--/>-->
+
+
 </LinearLayout>
+    <!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="每周课程学习"-->
+    <!--android:textColor="@color/black"-->
+    <!--/>-->
