--- a/app/src/main/res/layout/student_info.xml
+++ b/app/src/main/res/layout/student_info.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="20dp"
     android:fitsSystemWindows="true"
 
     >
@@ -25,7 +24,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
         <lecho.lib.hellocharts.view.LineChartView
             android:id="@+id/chart_overall"
             android:layout_width="match_parent"
@@ -48,7 +49,7 @@
     <!--/>-->
 
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
     <!--<TextView-->
     <!--android:layout_width="wrap_content"-->
     <!--android:layout_height="wrap_content"-->
